--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,11 @@ beautifulsoup4==4.12.0  # For HTML email parsing
 numpy==1.26.0
 python-dateutil==2.8.2
 
+# Logging (add these)
+structlog==23.1.0  # Structured logging
+loguru==0.7.2      # Alternative logging with better formatting
+python-json-logger==2.0.7  # For JSON-formatted logs
+
 # Caching & Performance
 cachetools==5.3.2
 pylru==1.2.0
