--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,22 @@
 # Core Requirements
 streamlit==1.32.0
-pandas==2.1.4
+pandas>=2.2.0  # Updated for Python 3.13 compatibility
 plotly==5.18.0
 python-dotenv==1.0.0
 
 # Email Processing
 imaplib2==3.6
 email-validator==2.0.0
-beautifulsoup4==4.12.0  # For HTML email parsing
+beautifulsoup4==4.12.0
 
 # Data Processing
-numpy==1.26.0
+numpy>=1.26.0  # Updated minimum version
 python-dateutil==2.8.2
 
-# Logging (add these)
-structlog==23.1.0  # Structured logging
-loguru==0.7.2      # Alternative logging with better formatting
-python-json-logger==2.0.7  # For JSON-formatted logs
+# Logging
+structlog==23.1.0
+loguru==0.7.2
+python-json-logger==2.0.7
 
 # Caching & Performance
 cachetools==5.3.2
@@ -35,14 +35,14 @@ mypy==1.7.0
 pytest==7.4.3
 pytest-cov==4.1.0
 
-# Optional (for PDF receipt parsing)
+# Optional PDF parsing
 pdfminer.six==20221105
 PyPDF2==3.0.1
 
-# Optional (for OCR functionality)
+# Optional OCR
 pytesseract==0.3.10
 pillow==10.1.0
 
 # Backend Utilities
-typing-extensions==4.8.0  # For type hints
-tqdm==4.66.1  # For progress bars
+typing-extensions==4.8.0
+tqdm==4.66.1
